# chem-era

./: README.md  era.yaml  pyproject.toml
era/cfgs/: alignment.yaml  inference.yaml  precompute.yaml  training.yaml
era/cfgs/data/: chembl_smiles.yaml  generator_inference.yaml  toxicity.yaml
era/cfgs/energy_model/: QED_model.yaml  classifier_ensemble.yaml  similarity_model.yaml  validity_model.yaml
era/cfgs/hydra/launcher/: sherlock.yaml
era/cfgs/inference/: classifier_inference.yaml  generator_inference.yaml
era/cfgs/model/: classifier.yaml  generator.yaml
era/cfgs/precompute/: chembl_smiles.yaml  toxicity.yaml
era/cfgs/training/: binary.yaml  multiclass.yaml
era/data/: __init__.py  alignment_dataset.py  build_dataset.py  dataset_base.py  input_generators.py  target_generators.py  tokenizer.py
era/inference/: inference.py  inference_fxns.py
era/models/: __init__.py  alignment_module.py  build_model.py  encoder_model.py  lightning_module.py  rdkit_model.py  transformer_model.py
era/networks/: embeddings.py  encoder.py  forward_fxns.py  transformer.py
era/scripts/: alignment_precompute.py  era_align.py  era_align_lightning.py  era_inference.py  era_train_lightning.py  era_training.py  modify_config_auto_restart.py  top_level_utils.py  training_precompute.py
era/training/: __init__.py  alignment.py  build_optimizer.py  loss_fxns.py  trainer.py
